--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# 환경 변수 파일
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
